--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,17 @@
-body{
+body {
     font-family:Helvetica;
 }
+
 a{
     color: black;
     text-decoration: none;
 }
+
 nav {
     display: flex;
     justify-content: space-around;
 }
+
 header{
     background: #AF7675;
     padding: 25px;
@@ -17,19 +20,14 @@ header{
 .contact:hover,.home:hover,.me:hover,.services:hover {
     font-weight: bold;
 }
+
 div {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
 }
-footer {
-    display: flex;
-    justify-content: center;
-}
-#iam {
-    color: #AF7675;
-}
+
 button {
     text-decoration: none;
     padding: 10px;
@@ -37,5 +35,66 @@ button {
     border-radius: 6px;
     border: 1px solid;
 }
+
+footer {
+    display: flex;
+    justify-content: center;
+}
+.github, .linkedin{
+    margin: 0.5em;
+}
+
+#iam {
+    color: #AF7675;
+}
+
+article {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+}
+
+article {
+    display: flex;
+    justify-content:space-around;
+}
+
+#me {
+    text-align: center;
+}
+
+.home {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+}
+
+.home {
+    display: flex;
+    flex-direction: row;
+    justify-content:center;
+}
+
+.hello, .index{
+    margin: 4em;
+}
+
+.aboutme {
+    display: grid;
+    grid-template-columns: 1fr 1r;
+}
+
+.aboutme {
+    display: flex;
+    flex-direction: row;
+    justify-content:center;
+}
+
+.foto, .texto{
+    margin: 6em;
+    margin-top: 4em;
+}
+
+
+
+
 
 
