--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body {
     font-family:Helvetica;
+    background-image: url(../img/fondo.jpg);
 }
 
 a{
@@ -13,8 +14,10 @@ nav {
 }
 
 header{
-    background: #AF7675;
+    background: #E1BBB3;
     padding: 25px;
+    border-radius: 6px;
+    border: 1px solid;
 }
 
 .contact:hover,.home:hover,.me:hover,.services:hover {
@@ -31,12 +34,16 @@ div {
 button {
     text-decoration: none;
     padding: 10px;
-    background-color: #AF7675;
+    background-color: #E1BBB3;
     border-radius: 6px;
     border: 1px solid;
 }
 
 footer {
+    background: #E1BBB3;
+    padding: 3px;
+    border-radius: 6px;
+    border: 1px solid;
     display: flex;
     justify-content: center;
 }
@@ -45,7 +52,7 @@ footer {
 }
 
 #iam {
-    color: #AF7675;
+    color: #E1BBB3;
 }
 
 article {
@@ -60,6 +67,13 @@ article {
 
 #me {
     text-align: center;
+    margin: 4em;
+}
+#form {
+    background-color: white;
+    padding: 20px;
+    border-radius: 6px;
+    border: 1px solid;
 }
 
 .home {
