--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
     font-family:Helvetica;
     background-image: url(../img/fondo.jpg);
+
 }
 
 a{
@@ -44,6 +45,9 @@ footer {
     padding: 3px;
     border-radius: 6px;
     border: 1px solid;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
     display: flex;
     justify-content: center;
 }
@@ -97,6 +101,7 @@ article {
 }
 
 .aboutme {
+    text-align: center;
     display: flex;
     flex-direction: row;
     justify-content:center;
